[package]
name = "ning-os"
version = "0.1.0"
authors = ["zqning <3080289509@qq.com>"]
edition = "2021"

[profile.release]
# link time optimization
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = {version = "7.0.0"}