[package]
name = "ning-os"
version = "0.5.0"
authors = ["zqning <3080289509@qq.com>"]
edition = "2021"

[profile.release]
# link time optimization
lto = true

[features]
default = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = {version = "7.0.0"}